[gd_scene load_steps=45 format=3 uid="uid://b1njk8mndwsuk"]

[ext_resource type="PackedScene" uid="uid://bui7nabcck66v" path="res://Prefab/SuperTile/SuperTilePrefab2_.tscn" id="1_6fv0g"]
[ext_resource type="Script" path="res://Scripts/WaveFunctionCollapse.gd" id="1_427g2"]
[ext_resource type="PackedScene" uid="uid://dmw85xn2ygshe" path="res://Prefab/Tile/Empty_TilePrefab.tscn" id="1_ng7v5"]
[ext_resource type="Script" path="res://Scripts/Controllers/SuperTileController.gd" id="2_oahl4"]
[ext_resource type="PackedScene" uid="uid://dja2gy701kmw7" path="res://Prefab/Tile/Big_Rock/BR_TilePrefab1.tscn" id="3_05jhd"]
[ext_resource type="PackedScene" uid="uid://bws7t25k3hde4" path="res://Prefab/Tile/Big_Rock/test_tile_prefab.tscn" id="3_e84ql"]
[ext_resource type="Texture2D" uid="uid://ccyc8d6v8bn16" path="res://Sprites/UI/White_block.png" id="3_fijyv"]
[ext_resource type="Shape2D" uid="uid://cfglgyum6mooq" path="res://CollisionShapes/TileColShape2D.tres" id="4_gfe8k"]
[ext_resource type="PackedScene" uid="uid://b3cssyctexol5" path="res://Prefab/Tile/Big_Rock/BR_TilePrefab2.tscn" id="4_q2lxa"]
[ext_resource type="PackedScene" uid="uid://c76exxauexome" path="res://Prefab/Tile/Big_Rock/BR_TilePrefab3.tscn" id="5_65i02"]
[ext_resource type="PackedScene" uid="uid://ctw05qim8p357" path="res://Prefab/Tile/Big_Rock/BR_TilePrefab4.tscn" id="6_536fc"]
[ext_resource type="PackedScene" uid="uid://dfqt8yugg5ie3" path="res://Prefab/Tile/Grass/Gr_TilePrefab1.tscn" id="7_djgam"]
[ext_resource type="PackedScene" uid="uid://chq8pg5wb8i2e" path="res://Prefab/Tile/Grass/Gr_TilePrefab2.tscn" id="8_fegtx"]
[ext_resource type="PackedScene" uid="uid://b1wbos7y1a7h0" path="res://Prefab/Tile/Grass/Gr_TilePrefab3.tscn" id="9_r7xw4"]
[ext_resource type="PackedScene" uid="uid://dne3mqwrl6dsu" path="res://Prefab/Tile/Grass/Gr_TilePrefab4.tscn" id="10_80o5n"]
[ext_resource type="PackedScene" uid="uid://dj07e8xsgalbt" path="res://Prefab/Tile/Objects/Ob_TilePrefab1.tscn" id="11_flbq1"]
[ext_resource type="PackedScene" uid="uid://qcq4re5ae7hr" path="res://Prefab/Tile/Objects/Ob_TilePrefab2.tscn" id="12_2n7yp"]
[ext_resource type="PackedScene" uid="uid://b4pmm8rjwn02o" path="res://Prefab/Tile/Path/Pt_TilePrefab1.tscn" id="13_rupan"]
[ext_resource type="PackedScene" uid="uid://blwdqp1shbb47" path="res://Prefab/Tile/Path/Pt_TilePrefab2.tscn" id="14_w3oc4"]
[ext_resource type="PackedScene" uid="uid://drf6mpd0c1y8q" path="res://Prefab/Tile/Rocks/Roc_TilePrefab1.tscn" id="15_0fqti"]
[ext_resource type="PackedScene" uid="uid://dtkthjk1v6npu" path="res://Prefab/Tile/Rocks/Roc_TilePrefab2.tscn" id="16_iwpit"]
[ext_resource type="PackedScene" uid="uid://ojvg6e1sc80" path="res://Prefab/Tile/Rocks/Roc_TilePrefab3.tscn" id="17_5corl"]
[ext_resource type="PackedScene" uid="uid://cy126ydmwi2g5" path="res://Prefab/Tile/Tomb/Tmb_TilePrefab1.tscn" id="18_5e26a"]
[ext_resource type="PackedScene" uid="uid://dkp5lstff45kv" path="res://Prefab/Tile/Tomb/Tmb_TilePrefab2.tscn" id="19_m56u3"]
[ext_resource type="PackedScene" uid="uid://k0jfptyluqce" path="res://Prefab/PlaceHolderTiles_UI/place_holder_tile_UI_.tscn" id="19_qebm0"]
[ext_resource type="PackedScene" uid="uid://dfyb8etgkg0qm" path="res://Prefab/TileSocket/tile_socket_empty.tscn" id="20_ea3n0"]
[ext_resource type="Script" path="res://Scripts/UI/TilePanelController.gd" id="21_w75fi"]
[ext_resource type="PackedScene" uid="uid://ds485h878imr" path="res://Prefab/TileSocket/Big_Rock/tile_socket_br_1.tscn" id="21_wkahl"]
[ext_resource type="PackedScene" uid="uid://bypthbls22gyc" path="res://Prefab/TileSocket/Big_Rock/tile_socket_br_2.tscn" id="22_pd7qo"]
[ext_resource type="PackedScene" uid="uid://ce781nr73u1wp" path="res://Prefab/TileSocket/Big_Rock/tile_socket_br_3.tscn" id="23_5e2n1"]
[ext_resource type="PackedScene" uid="uid://bo1c4fcqtwgik" path="res://Prefab/TileSocket/Big_Rock/tile_socket_br_4.tscn" id="24_oumgt"]
[ext_resource type="PackedScene" uid="uid://dasdnmrpd6t3" path="res://Prefab/TileSocket/Grass/tile_socket_grass_1.tscn" id="25_vf1wa"]
[ext_resource type="PackedScene" uid="uid://bdobqd5nbbb7m" path="res://Prefab/TileSocket/Grass/tile_socket_grass_2.tscn" id="26_5tcfa"]
[ext_resource type="PackedScene" uid="uid://docw6exowdnf6" path="res://Prefab/TileSocket/Grass/tile_socket_grass_3.tscn" id="27_jue3t"]
[ext_resource type="PackedScene" uid="uid://dmp7ysdgaux7x" path="res://Prefab/TileSocket/Grass/tile_socket_grass_4.tscn" id="28_4karm"]
[ext_resource type="PackedScene" uid="uid://dvfqhsy46da4l" path="res://Prefab/TileSocket/Objects/tile_socket_obj_1.tscn" id="29_unfkg"]
[ext_resource type="PackedScene" uid="uid://da3d8vklmli1s" path="res://Prefab/TileSocket/Objects/tile_socket_obj_2.tscn" id="30_umkvk"]
[ext_resource type="PackedScene" uid="uid://qavub10dh1nt" path="res://Prefab/TileSocket/Path/tile_socket_path_1.tscn" id="31_o43k1"]
[ext_resource type="PackedScene" uid="uid://2mly6u5r67di" path="res://Prefab/TileSocket/Path/tile_socket_path_2.tscn" id="32_5kag4"]
[ext_resource type="PackedScene" uid="uid://h7ykltjm03j5" path="res://Prefab/TileSocket/Rocks/tile_socket_rock_1.tscn" id="33_nw2e4"]
[ext_resource type="PackedScene" uid="uid://ck13wycnd5fp7" path="res://Prefab/TileSocket/Rocks/tile_socket_rock_2.tscn" id="34_np0sw"]
[ext_resource type="PackedScene" uid="uid://goml3mo8ryl1" path="res://Prefab/TileSocket/Rocks/tile_socket_rock_3.tscn" id="35_1bqce"]
[ext_resource type="PackedScene" uid="uid://cq0qmdl67dx2k" path="res://Prefab/TileSocket/Tomb/tile_socket_tomb_1.tscn" id="36_sf287"]
[ext_resource type="PackedScene" uid="uid://bwy3giluss6be" path="res://Prefab/TileSocket/Tomb/tile_socket_tomb_2.tscn" id="37_s4qdi"]

[node name="Main01" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="TileHolder" type="Node" parent="."]

[node name="TilePrefab" parent="TileHolder" instance=ExtResource("1_6fv0g")]

[node name="TilePrefabsContainer" type="Node" parent="."]

[node name="SuperTilePrefab2" type="Node2D" parent="TilePrefabsContainer"]
visible = false
script = ExtResource("2_oahl4")

[node name="SuperTileSprite" type="Sprite2D" parent="TilePrefabsContainer/SuperTilePrefab2"]
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_fijyv")

[node name="Area2D" type="Area2D" parent="TilePrefabsContainer/SuperTilePrefab2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TilePrefabsContainer/SuperTilePrefab2/Area2D"]
shape = ExtResource("4_gfe8k")

[node name="Empty_TilePrefab" parent="TilePrefabsContainer" instance=ExtResource("1_ng7v5")]
visible = false

[node name="Test_TilePrefab" parent="TilePrefabsContainer" instance=ExtResource("3_e84ql")]
visible = false
position = Vector2(-59, -56)

[node name="Big_Rock" type="Node" parent="TilePrefabsContainer"]

[node name="BR_TilePrefab" parent="TilePrefabsContainer/Big_Rock" instance=ExtResource("3_05jhd")]
visible = false

[node name="BR_TilePrefab2" parent="TilePrefabsContainer/Big_Rock" instance=ExtResource("4_q2lxa")]
visible = false

[node name="BR_TilePrefab3" parent="TilePrefabsContainer/Big_Rock" instance=ExtResource("5_65i02")]
visible = false

[node name="BR_TilePrefab4" parent="TilePrefabsContainer/Big_Rock" instance=ExtResource("6_536fc")]
visible = false

[node name="Objects" type="Node" parent="TilePrefabsContainer"]

[node name="Ob_TilePrefab" parent="TilePrefabsContainer/Objects" instance=ExtResource("11_flbq1")]
visible = false

[node name="Ob_TilePrefab2" parent="TilePrefabsContainer/Objects" instance=ExtResource("12_2n7yp")]
visible = false

[node name="Grass" type="Node" parent="TilePrefabsContainer"]

[node name="Gr_TilePrefab" parent="TilePrefabsContainer/Grass" instance=ExtResource("7_djgam")]
visible = false

[node name="Gr_TilePrefab2" parent="TilePrefabsContainer/Grass" instance=ExtResource("8_fegtx")]
visible = false

[node name="Gr_TilePrefab3" parent="TilePrefabsContainer/Grass" instance=ExtResource("9_r7xw4")]
visible = false

[node name="Gr_TilePrefab4" parent="TilePrefabsContainer/Grass" instance=ExtResource("10_80o5n")]
visible = false

[node name="Path" type="Node" parent="TilePrefabsContainer"]

[node name="Pt_TilePrefab" parent="TilePrefabsContainer/Path" instance=ExtResource("13_rupan")]
visible = false

[node name="Pt_TilePrefab2" parent="TilePrefabsContainer/Path" instance=ExtResource("14_w3oc4")]
visible = false

[node name="Rocks" type="Node" parent="TilePrefabsContainer"]

[node name="Roc_TilePrefab" parent="TilePrefabsContainer/Rocks" instance=ExtResource("15_0fqti")]
visible = false

[node name="Roc_TilePrefab2" parent="TilePrefabsContainer/Rocks" instance=ExtResource("16_iwpit")]
visible = false

[node name="Roc_TilePrefab3" parent="TilePrefabsContainer/Rocks" instance=ExtResource("17_5corl")]
visible = false

[node name="Tomb" type="Node" parent="TilePrefabsContainer"]

[node name="Tmb_TilePrefab" parent="TilePrefabsContainer/Tomb" instance=ExtResource("18_5e26a")]
visible = false

[node name="Tmb_TilePrefab2" parent="TilePrefabsContainer/Tomb" instance=ExtResource("19_m56u3")]
visible = false

[node name="TileSocketContainer_Old" type="Node" parent="."]

[node name="TileSocket_Prefab" parent="TileSocketContainer_Old" instance=ExtResource("20_ea3n0")]

[node name="Big_Rock" type="Node" parent="TileSocketContainer_Old"]

[node name="TileSocket_Prefab" parent="TileSocketContainer_Old/Big_Rock" instance=ExtResource("21_wkahl")]

[node name="TileSocket_Prefab2" parent="TileSocketContainer_Old/Big_Rock" instance=ExtResource("22_pd7qo")]

[node name="TileSocket_Prefab3" parent="TileSocketContainer_Old/Big_Rock" instance=ExtResource("23_5e2n1")]

[node name="TileSocket_Prefab4" parent="TileSocketContainer_Old/Big_Rock" instance=ExtResource("24_oumgt")]

[node name="Grass" type="Node" parent="TileSocketContainer_Old"]

[node name="TileSocket_Prefab" parent="TileSocketContainer_Old/Grass" instance=ExtResource("25_vf1wa")]

[node name="TileSocket_Prefab2" parent="TileSocketContainer_Old/Grass" instance=ExtResource("26_5tcfa")]

[node name="TileSocket_Prefab3" parent="TileSocketContainer_Old/Grass" instance=ExtResource("27_jue3t")]

[node name="TileSocket_Prefab4" parent="TileSocketContainer_Old/Grass" instance=ExtResource("28_4karm")]

[node name="Objects" type="Node" parent="TileSocketContainer_Old"]

[node name="TileSocket_Prefab" parent="TileSocketContainer_Old/Objects" instance=ExtResource("29_unfkg")]

[node name="TileSocket_Prefab2" parent="TileSocketContainer_Old/Objects" instance=ExtResource("30_umkvk")]

[node name="Path" type="Node" parent="TileSocketContainer_Old"]

[node name="TileSocket_Prefab" parent="TileSocketContainer_Old/Path" instance=ExtResource("31_o43k1")]

[node name="TileSocket_Prefab2" parent="TileSocketContainer_Old/Path" instance=ExtResource("32_5kag4")]

[node name="Rocks" type="Node" parent="TileSocketContainer_Old"]

[node name="TileSocket_Prefab" parent="TileSocketContainer_Old/Rocks" instance=ExtResource("33_nw2e4")]

[node name="TileSocket_Prefab2" parent="TileSocketContainer_Old/Rocks" instance=ExtResource("34_np0sw")]

[node name="TileSocket_Prefab3" parent="TileSocketContainer_Old/Rocks" instance=ExtResource("35_1bqce")]

[node name="Tomb" type="Node" parent="TileSocketContainer_Old"]

[node name="TileSocket_Prefab2" parent="TileSocketContainer_Old/Tomb" instance=ExtResource("36_sf287")]

[node name="TileSocket_Prefab3" parent="TileSocketContainer_Old/Tomb" instance=ExtResource("37_s4qdi")]

[node name="WaveFunctionCollapse" type="Node" parent="." node_paths=PackedStringArray("superTilePrefab", "tilePrefabsList", "tileHolder")]
script = ExtResource("1_427g2")
superTilePrefab = NodePath("../TilePrefabsContainer/SuperTilePrefab2")
tilePrefabsList = [NodePath("../TilePrefabsContainer/Big_Rock/BR_TilePrefab"), NodePath("../TilePrefabsContainer/Big_Rock/BR_TilePrefab2"), NodePath("../TilePrefabsContainer/Big_Rock/BR_TilePrefab3"), NodePath("../TilePrefabsContainer/Big_Rock/BR_TilePrefab4"), NodePath("../TilePrefabsContainer/Grass/Gr_TilePrefab"), NodePath("../TilePrefabsContainer/Grass/Gr_TilePrefab2"), NodePath("../TilePrefabsContainer/Grass/Gr_TilePrefab3"), NodePath("../TilePrefabsContainer/Grass/Gr_TilePrefab4"), NodePath("../TilePrefabsContainer/Objects/Ob_TilePrefab"), NodePath("../TilePrefabsContainer/Objects/Ob_TilePrefab2"), NodePath("../TilePrefabsContainer/Path/Pt_TilePrefab"), NodePath("../TilePrefabsContainer/Path/Pt_TilePrefab2"), NodePath("../TilePrefabsContainer/Rocks/Roc_TilePrefab"), NodePath("../TilePrefabsContainer/Rocks/Roc_TilePrefab2"), NodePath("../TilePrefabsContainer/Rocks/Roc_TilePrefab3"), NodePath("../TilePrefabsContainer/Tomb/Tmb_TilePrefab"), NodePath("../TilePrefabsContainer/Tomb/Tmb_TilePrefab2"), NodePath("../TilePrefabsContainer/Empty_TilePrefab")]
tilePrefabsLocationList = Array[String](["res://Prefab/Tile/Big_Rock/BR_TilePrefab1.tscn", "res://Prefab/Tile/Big_Rock/BR_TilePrefab2.tscn", "res://Prefab/Tile/Big_Rock/BR_TilePrefab3.tscn", "res://Prefab/Tile/Big_Rock/BR_TilePrefab4.tscn", "res://Prefab/Tile/Grass/Gr_TilePrefab1.tscn", "res://Prefab/Tile/Grass/Gr_TilePrefab2.tscn", "res://Prefab/Tile/Grass/Gr_TilePrefab3.tscn", "res://Prefab/Tile/Grass/Gr_TilePrefab4.tscn", "res://Prefab/Tile/Objects/Ob_TilePrefab1.tscn", "res://Prefab/Tile/Objects/Ob_TilePrefab2.tscn", "res://Prefab/Tile/Path/Pt_TilePrefab1.tscn", "res://Prefab/Tile/Path/Pt_TilePrefab2.tscn", "res://Prefab/Tile/Rocks/Roc_TilePrefab1.tscn", "res://Prefab/Tile/Rocks/Roc_TilePrefab2.tscn", "res://Prefab/Tile/Rocks/Roc_TilePrefab3.tscn", "res://Prefab/Tile/Tomb/Tmb_TilePrefab1.tscn", "res://Prefab/Tile/Tomb/Tmb_TilePrefab2.tscn", "res://Prefab/Tile/Empty_TilePrefab.tscn"])
gridDimension = Vector2i(4, 4)
tileHolder = NodePath("../TileHolder")

[node name="MainCanvasLayer" type="CanvasLayer" parent="."]

[node name="PlaceHolderTile_Panel" type="Panel" parent="MainCanvasLayer"]
anchors_preset = -1
anchor_left = 0.03
anchor_top = 0.85
anchor_right = 0.87
anchor_bottom = 0.95
offset_bottom = -6.10352e-05
script = ExtResource("21_w75fi")

[node name="GridContainer" type="GridContainer" parent="MainCanvasLayer/PlaceHolderTile_Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.03
anchor_top = 0.5
anchor_right = 0.97
anchor_bottom = 0.5
offset_top = -16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 5
columns = 18

[node name="PlaceHolderTile_0" parent="MainCanvasLayer/PlaceHolderTile_Panel/GridContainer" instance=ExtResource("19_qebm0")]
visible = false
layout_mode = 2

[node name="PlaceHolderTile_1" parent="MainCanvasLayer/PlaceHolderTile_Panel/GridContainer" instance=ExtResource("19_qebm0")]
visible = false
layout_mode = 2
tileIndex = 1

[node name="PlaceHolderTile_2" parent="MainCanvasLayer/PlaceHolderTile_Panel/GridContainer" instance=ExtResource("19_qebm0")]
visible = false
layout_mode = 2
tileIndex = 2

[node name="PlaceHolderTile_3" parent="MainCanvasLayer/PlaceHolderTile_Panel/GridContainer" instance=ExtResource("19_qebm0")]
visible = false
layout_mode = 2
tileIndex = 3

[node name="PlaceHolderTile_4" parent="MainCanvasLayer/PlaceHolderTile_Panel/GridContainer" instance=ExtResource("19_qebm0")]
visible = false
layout_mode = 2
tileIndex = 4

[node name="PlaceHolderTile_5" parent="MainCanvasLayer/PlaceHolderTile_Panel/GridContainer" instance=ExtResource("19_qebm0")]
visible = false
layout_mode = 2
tileIndex = 5

[node name="PlaceHolderTile_6" parent="MainCanvasLayer/PlaceHolderTile_Panel/GridContainer" instance=ExtResource("19_qebm0")]
visible = false
layout_mode = 2
tileIndex = 6

[node name="PlaceHolderTile_7" parent="MainCanvasLayer/PlaceHolderTile_Panel/GridContainer" instance=ExtResource("19_qebm0")]
visible = false
layout_mode = 2
tileIndex = 7

[node name="PlaceHolderTile_8" parent="MainCanvasLayer/PlaceHolderTile_Panel/GridContainer" instance=ExtResource("19_qebm0")]
visible = false
layout_mode = 2
tileIndex = 8

[node name="PlaceHolderTile_9" parent="MainCanvasLayer/PlaceHolderTile_Panel/GridContainer" instance=ExtResource("19_qebm0")]
visible = false
layout_mode = 2
tileIndex = 9

[node name="PlaceHolderTile_10" parent="MainCanvasLayer/PlaceHolderTile_Panel/GridContainer" instance=ExtResource("19_qebm0")]
visible = false
layout_mode = 2
tileIndex = 10

[node name="PlaceHolderTile_11" parent="MainCanvasLayer/PlaceHolderTile_Panel/GridContainer" instance=ExtResource("19_qebm0")]
visible = false
layout_mode = 2
tileIndex = 11

[node name="PlaceHolderTile_12" parent="MainCanvasLayer/PlaceHolderTile_Panel/GridContainer" instance=ExtResource("19_qebm0")]
visible = false
layout_mode = 2
tileIndex = 12

[node name="PlaceHolderTile_13" parent="MainCanvasLayer/PlaceHolderTile_Panel/GridContainer" instance=ExtResource("19_qebm0")]
visible = false
layout_mode = 2
tileIndex = 13

[node name="PlaceHolderTile_14" parent="MainCanvasLayer/PlaceHolderTile_Panel/GridContainer" instance=ExtResource("19_qebm0")]
visible = false
layout_mode = 2
tileIndex = 14

[node name="PlaceHolderTile_15" parent="MainCanvasLayer/PlaceHolderTile_Panel/GridContainer" instance=ExtResource("19_qebm0")]
visible = false
layout_mode = 2
tileIndex = 15

[node name="PlaceHolderTile_16" parent="MainCanvasLayer/PlaceHolderTile_Panel/GridContainer" instance=ExtResource("19_qebm0")]
visible = false
layout_mode = 2
tileIndex = 16

[node name="PlaceHolderTile_" parent="MainCanvasLayer/PlaceHolderTile_Panel/GridContainer" instance=ExtResource("19_qebm0")]
visible = false
layout_mode = 2
tileIndex = 17

[node name="Side_Panel" type="Panel" parent="MainCanvasLayer"]
anchors_preset = -1
anchor_left = 0.91
anchor_top = 0.05
anchor_right = 0.98
anchor_bottom = 0.95

[connection signal="input_event" from="TilePrefabsContainer/SuperTilePrefab2/Area2D" to="TilePrefabsContainer/SuperTilePrefab2" method="_on_area_2d_input_event" flags=18]
